
        BOOKKEEPER-279: LocalBookKeeper is failing intermittently due to zkclient connection establishment delay (Rakesh R via sijie)

        BOOKKEEPER-286: Compilation warning (ivank via sijie)

        BOOKKEEPER-287: NoSuchElementException in LedgerCacheImpl (sijie)

        BOOKKEEPER-288: NOTICE files don't have the correct year (ivank via sijie)

      hedwig-client/

        BOOKKEEPER-217: NPE in hedwig client when enable DEBUG (sijie via ivank)

      hedwig-server/
      
        BOOKKEEPER-140: Hub server doesn't subscribe remote region correctly when a region is down. (Sijie Gou via ivank)

        BOOKKEEPER-133: Hub server should update subscription state to zookeeper when losing topic or shutting down (Sijie Gou via ivank)

        BOOKKEEPER-74: Bookkeeper Persistence Manager should give up topic on error (sijie via ivank)

        BOOKKEEPER-163: Prevent incorrect NoSuchLedgerException for readLastConfirmed. (ivank via sijie)

        BOOKKEEPER-197: HedwigConsole uses the same file to load bookkeeper client config and hub server config (sijie)

        BOOKKEEPER-56: Race condition of message handler in connection recovery in Hedwig client (sijie & Gavin Li via ivank)

        BOOKKEEPER-215: Deadlock occurs under high load (sijie via ivank)

        BOOKKEEPER-245: Intermittent failures in PersistanceManager tests (ivank)

        BOOKKEEPER-209: Typo in ServerConfiguration for READAHEAD_ENABLED (ivank)

        BOOKKEEPER-146: TestConcurrentTopicAcquisition sometimes hangs (ivank)

        BOOKKEEPER-285: TestZkSubscriptionManager quits due to NPE, so other tests are not run in hedwig server. (sijie)

      bookkeeper-benchmark/
	
	BOOKKEEPER-207: BenchBookie doesn't run correctly (ivank via fpj)

        BOOKKEEPER-228: Fix the bugs in BK benchmark (umamaheswararao via ivank)

    IMPROVEMENTS:

	BOOKKEEPER-265: Review JMX documentation (sijie via fpj)

      bookkeeper-server/
